0001-creed-add-permission-check