@@ -1,17 +1,20 @@
 package com.ethan.system.service.permission;
 
 import com.ethan.common.constant.CommonStatusEnum;
+import com.ethan.common.pojo.BaseXDO;
+import com.ethan.common.pojo.PageResult;
 import com.ethan.common.utils.collection.CollUtils;
-import com.ethan.system.constant.permission.DataScopeEnum;
+import com.ethan.security.websecurity.constant.DataScopeEnum;
+import com.ethan.security.websecurity.constant.RoleTypeEnum;
+import com.ethan.security.websecurity.entity.CreedAuthorities;
+import com.ethan.security.websecurity.repository.CreedAuthorityRepository;
 import com.ethan.system.constant.permission.RoleCodeEnum;
-import com.ethan.system.constant.permission.RoleTypeEnum;
 import com.ethan.system.controller.admin.permission.vo.role.RoleCreateReqVO;
 import com.ethan.system.controller.admin.permission.vo.role.RoleExportReqVO;
 import com.ethan.system.controller.admin.permission.vo.role.RolePageReqVO;
+import com.ethan.system.controller.admin.permission.vo.role.RoleSimpleRespVO;
 import com.ethan.system.controller.admin.permission.vo.role.RoleUpdateReqVO;
-import com.ethan.system.convert.permission.RoleConvert;
-import com.ethan.system.dal.entity.permission.RoleDO;
-import com.ethan.system.dal.repository.permission.RoleRepository;
+import com.ethan.system.convert.permission.AuthorityConvert;
 import com.ethan.system.mq.permission.RoleProducer;
 import com.google.common.annotations.VisibleForTesting;
 import jakarta.annotation.PostConstruct;
@@ -20,6 +23,7 @@ import jakarta.persistence.criteria.Predicate;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -31,11 +35,8 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.TransactionSynchronization;
 import org.springframework.transaction.support.TransactionSynchronizationManager;
 import org.springframework.util.CollectionUtils;
-import org.springframework.util.StringUtils;
 
 import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -44,14 +45,13 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicReference;
 
 import static com.ethan.common.exception.util.ServiceExceptionUtil.exception;
 import static com.ethan.system.constant.ErrorCodeConstants.ROLE_ADMIN_CODE_ERROR;
 import static com.ethan.system.constant.ErrorCodeConstants.ROLE_CAN_NOT_UPDATE_SYSTEM_TYPE_ROLE;
 import static com.ethan.system.constant.ErrorCodeConstants.ROLE_CODE_DUPLICATE;
 import static com.ethan.system.constant.ErrorCodeConstants.ROLE_IS_DISABLE;
-import static com.ethan.system.constant.ErrorCodeConstants.ROLE_NAME_DUPLICATE;
 import static com.ethan.system.constant.ErrorCodeConstants.ROLE_NOT_EXISTS;
 
 
@@ -72,23 +72,28 @@ public class RoleServiceImpl implements RoleService {
 
     /**
      * 角色缓存
-     * key：角色编号 {@link RoleDO#getId()}
+     * key：角色编号 {@link CreedAuthorities#getId()}
      *
      * 这里声明 volatile 修饰的原因是，每次刷新时，直接修改指向
      */
     @Getter
-    private volatile Map<Long, RoleDO> roleCache;
+    // private volatile Map<String, CreedAuthorities> roleCache;
+    private AtomicReference<Map<String, CreedAuthorities>> roleCache = new AtomicReference<>(Collections.emptyMap());
+
     /**
      * 缓存角色的最大更新时间，用于后续的增量轮询，判断是否有更新
      */
     @Getter
-    private volatile Instant maxUpdateTime;
+    // private volatile Instant maxUpdateTime;
+    private AtomicReference<Instant> maxUpdateTime = new AtomicReference<>();
 
     @Resource
     private PermissionService permissionService;
 
+    // @Resource
+    // private RoleRepository roleRepository;
     @Resource
-    private RoleRepository roleRepository;
+    private CreedAuthorityRepository authorityRepository;
 
     @Resource
     private RoleProducer roleProducer;
@@ -105,14 +110,14 @@ public class RoleServiceImpl implements RoleService {
     // @TenantIgnore // 忽略自动多租户，全局初始化缓存
     public void initLocalCache() {
         // 获取角色列表，如果有更新
-        List<RoleDO> roleList = loadRoleIfUpdate(maxUpdateTime);
+        List<CreedAuthorities> roleList = loadRoleIfUpdate(maxUpdateTime.get());
         if (CollectionUtils.isEmpty(roleList)) {
             return;
         }
 
         // 写入缓存
-        roleCache = CollUtils.convertMap(roleList, RoleDO::getId);
-        maxUpdateTime = CollUtils.getMaxValue(roleList, RoleDO::getUpdateTime);
+        roleCache.getAndSet(CollUtils.convertMap(roleList, CreedAuthorities::getId));
+        maxUpdateTime.getAndSet(CollUtils.getMaxValue(roleList, BaseXDO::getUpdateTime));
         log.info("[initLocalCache][初始化 Role 数量为 {}]", roleList.size());
     }
 
@@ -128,31 +133,30 @@ public class RoleServiceImpl implements RoleService {
      * @param maxUpdateTime 当前角色的最大更新时间
      * @return 角色列表
      */
-    private List<RoleDO> loadRoleIfUpdate(Instant maxUpdateTime) {
+    private List<CreedAuthorities> loadRoleIfUpdate(Instant maxUpdateTime) {
         // 第一步，判断是否要更新。
         if (maxUpdateTime == null) { // 如果更新时间为空，说明 DB 一定有新数据
             log.info("[loadRoleIfUpdate][首次加载全量角色]");
         } else { // 判断数据库中是否有更新的角色
-            if (roleRepository.countByUpdateTimeGreaterThan(LocalDateTime.ofInstant(maxUpdateTime, ZoneId.systemDefault())) == 0) {
-                return null;
+            if (authorityRepository.countByUpdateTimeGreaterThan(maxUpdateTime) == 0) {
+                return Collections.emptyList();
             }
             log.info("[loadRoleIfUpdate][增量加载全量角色]");
         }
         // 第二步，如果有更新，则从数据库加载所有角色
-        return roleRepository.findAll();
+        return authorityRepository.findAll();
     }
 
     @Override
     @Transactional
-    public Long createRole(RoleCreateReqVO reqVO, Integer type) {
+    public String createAuthority(RoleCreateReqVO reqVO, Integer type) {
         // 校验角色
-        checkDuplicateRole(reqVO.getName(), reqVO.getCode(), null);
+        checkDuplicateRole(reqVO.getDescription(), reqVO.getAuthority(), null);
         // 插入到数据库
-        RoleDO role = RoleConvert.INSTANCE.convert(reqVO);
-        role.setType(ObjectUtils.defaultIfNull(type, RoleTypeEnum.CUSTOM.getType()));
-        role.setStatus(CommonStatusEnum.ENABLE.getStatus());
-        role.setDataScope(DataScopeEnum.ALL.getScope()); // 默认可查看所有数据。原因是，可能一些项目不需要项目权限
-        roleRepository.save(role);
+        CreedAuthorities authority = AuthorityConvert.INSTANCE.convert(reqVO);
+        authority.setType(ObjectUtils.defaultIfNull(type, RoleTypeEnum.CUSTOM.getType()));
+        authority.setDataScope(DataScopeEnum.ALL.getScope()); // 默认可查看所有数据。原因是，可能一些项目不需要项目权限
+        authorityRepository.save(authority);
         // 发送刷新消息
         TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
             @Override
@@ -161,57 +165,53 @@ public class RoleServiceImpl implements RoleService {
             }
         });
         // 返回
-        return role.getId();
+        return authority.getId();
     }
 
     @Override
     public void updateRole(RoleUpdateReqVO reqVO) {
         // 校验是否可以更新
-        checkUpdateRole(reqVO.getId());
+        CreedAuthorities authorities = checkUpdateRole(reqVO.getId());
         // 校验角色的唯一字段是否重复
-        checkDuplicateRole(reqVO.getName(), reqVO.getCode(), reqVO.getId());
+        checkDuplicateRole(reqVO.getDescription(), reqVO.getAuthority(), reqVO.getId());
 
         // 更新到数据库
-        RoleDO updateObject = RoleConvert.INSTANCE.convert(reqVO);
-        roleRepository.save(updateObject);
+        AuthorityConvert.INSTANCE.update(reqVO, authorities);
+        authorityRepository.save(authorities);
         // 发送刷新消息
         roleProducer.sendRoleRefreshMessage();
     }
 
     @Override
-    public void updateRoleStatus(Long id, Integer status) {
+    public void updateRoleStatus(String id, Integer status) {
         // 校验是否可以更新
-        checkUpdateRole(id);
+        CreedAuthorities authorities = checkUpdateRole(id);
         // 更新状态
-        RoleDO updateObject = new RoleDO();
-        updateObject.setId(id);
-        updateObject.setStatus(status);
-        roleRepository.save(updateObject);
+        authorities.setEnabled(CommonStatusEnum.convert(status));
+        authorityRepository.save(authorities);
         // 发送刷新消息
         roleProducer.sendRoleRefreshMessage();
     }
 
     @Override
-    public void updateRoleDataScope(Long id, Integer dataScope, Set<Long> dataScopeDeptIds) {
+    public void updateRoleDataScope(String id, Integer dataScope, Set<Long> dataScopeDeptIds) {
         // 校验是否可以更新
-        checkUpdateRole(id);
+        CreedAuthorities authorities = checkUpdateRole(id);
         // 更新数据范围
-        RoleDO updateObject = new RoleDO();
-        updateObject.setId(id);
-        updateObject.setDataScope(dataScope);
-        updateObject.setDataScopeDeptIds(dataScopeDeptIds);
-        roleRepository.save(updateObject);
+        authorities.setDataScope(dataScope);
+        authorities.setDataScopeDeptIds(dataScopeDeptIds);
+        authorityRepository.save(authorities);
         // 发送刷新消息
         roleProducer.sendRoleRefreshMessage();
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void deleteRole(Long id) {
+    public void deleteRole(String id) {
         // 校验是否可以更新
         this.checkUpdateRole(id);
         // 标记删除
-        roleRepository.deleteById(id);
+        authorityRepository.deleteById(id);
         // 删除相关数据
         permissionService.processRoleDeleted(id);
         // 发送刷新消息. 注意，需要事务提交后，在进行发送刷新消息。不然 db 还未提交，结果缓存先刷新了
@@ -226,59 +226,61 @@ public class RoleServiceImpl implements RoleService {
     }
 
     @Override
-    public RoleDO getRoleFromCache(Long id) {
-        return roleCache.get(id);
+    public CreedAuthorities getRoleFromCache(String id) {
+        return roleCache.get().get(id);
     }
 
     @Override
-    public List<RoleDO> getRoles(@Nullable Collection<Integer> statuses) {
+    public List<CreedAuthorities> getRoles(@Nullable Collection<Integer> statuses) {
         if (CollectionUtils.isEmpty(statuses)) {
-    		return roleRepository.findAll();
+    		return authorityRepository.findAll();
 		}
-        return roleRepository.findByStatusIn(statuses);
+        return authorityRepository.findByEnabledIn(statuses);
     }
 
     @Override
-    public List<RoleDO> getRolesFromCache(Collection<Long> ids) {
+    public List<CreedAuthorities> getRolesFromCache(Collection<String> ids) {
         if (CollectionUtils.isEmpty(ids)) {
             return Collections.emptyList();
         }
-        return roleCache.values().stream().filter(roleDO -> ids.contains(roleDO.getId()))
-                .collect(Collectors.toList());
+        return roleCache.get().values().stream().filter(roleDO -> ids.contains(roleDO.getId()))
+                .toList();
     }
 
     @Override
-    public boolean hasAnySuperAdmin(Collection<RoleDO> roleList) {
+    public boolean hasAnySuperAdmin(Collection<CreedAuthorities> roleList) {
         if (CollectionUtils.isEmpty(roleList)) {
             return false;
         }
-        return roleList.stream().anyMatch(role -> RoleCodeEnum.isSuperAdmin(role.getCode()));
+        return roleList.stream().anyMatch(role -> RoleCodeEnum.isSuperAdmin(role.getAuthority()));
     }
 
     @Override
-    public RoleDO getRole(Long id) {
-        return roleRepository.findById(id).orElse(null);
+    public CreedAuthorities getRole(String id) {
+        return authorityRepository.findById(id).orElse(null);
     }
 
     @Override
-    public Page<RoleDO> getRolePage(RolePageReqVO reqVO) {
-        return roleRepository.findAll(getRoleSpecification(reqVO), PageRequest.of(reqVO.getPageNo(), reqVO.getPageSize()));
+    public PageResult<RoleSimpleRespVO> getRolePage(RolePageReqVO reqVO) {
+        Page<CreedAuthorities> page = authorityRepository.findAll(getRoleSpecification(reqVO), PageRequest.of(reqVO.getPageNo(), reqVO.getPageSize()));
+        List<RoleSimpleRespVO> roleSimpleResp = AuthorityConvert.INSTANCE.convertList02(page.getContent());
+        return new PageResult<>(roleSimpleResp, page.getTotalElements());
     }
 
 
-    private static Specification<RoleDO> getRoleSpecification(RolePageReqVO reqVO) {
-        return (Specification<RoleDO>) (root, query, cb) -> {
+    private static Specification<CreedAuthorities> getRoleSpecification(RolePageReqVO reqVO) {
+        return (Specification<CreedAuthorities>) (root, query, cb) -> {
             List<Predicate> predicateList = new ArrayList<>();
-            if (org.apache.commons.lang3.StringUtils.isNotBlank(reqVO.getName())) {
-                predicateList.add(cb.like(root.get("name"),
-                        "%" + reqVO.getName() + "%"));
+            if (org.apache.commons.lang3.StringUtils.isNotBlank(reqVO.getDescription())) {
+                predicateList.add(cb.like(root.get("description"),
+                        "%" + reqVO.getDescription() + "%"));
             }
-            if (org.apache.commons.lang3.StringUtils.isNotBlank(reqVO.getCode())) {
-                predicateList.add(cb.like(root.get("code"),
-                        "%" + reqVO.getCode() + "%"));
+            if (org.apache.commons.lang3.StringUtils.isNotBlank(reqVO.getAuthority())) {
+                predicateList.add(cb.like(root.get("authority"),
+                        "%" + reqVO.getAuthority() + "%"));
             }
             if (Objects.nonNull(reqVO.getStatus())) {
-                predicateList.add(cb.equal(root.get("status"), reqVO.getStatus()));
+                predicateList.add(cb.equal(root.get("enabled"), reqVO.getStatus()));
             }
             if (Objects.nonNull(reqVO.getStatus())) {
                 predicateList.add(cb.greaterThan(root.get("createTime"), reqVO.getCreateTime()));
@@ -286,19 +288,19 @@ public class RoleServiceImpl implements RoleService {
             return cb.and(predicateList.toArray(new Predicate[0]));
         };
     }
-    private static Specification<RoleDO> getExportReqSpecification(RoleExportReqVO reqVO) {
-        return (Specification<RoleDO>) (root, query, cb) -> {
+    private static Specification<CreedAuthorities> getExportReqSpecification(RoleExportReqVO reqVO) {
+        return (Specification<CreedAuthorities>) (root, query, cb) -> {
             List<Predicate> predicateList = new ArrayList<>();
-            if (org.apache.commons.lang3.StringUtils.isNotBlank(reqVO.getName())) {
-                predicateList.add(cb.like(root.get("name"),
-                        "%" + reqVO.getName() + "%"));
+            if (org.apache.commons.lang3.StringUtils.isNotBlank(reqVO.getDescription())) {
+                predicateList.add(cb.like(root.get("description"),
+                        "%" + reqVO.getDescription() + "%"));
             }
-            if (org.apache.commons.lang3.StringUtils.isNotBlank(reqVO.getCode())) {
-                predicateList.add(cb.like(root.get("code"),
-                        "%" + reqVO.getCode() + "%"));
+            if (org.apache.commons.lang3.StringUtils.isNotBlank(reqVO.getAuthority())) {
+                predicateList.add(cb.like(root.get("authority"),
+                        "%" + reqVO.getAuthority() + "%"));
             }
             if (Objects.nonNull(reqVO.getStatus())) {
-                predicateList.add(cb.equal(root.get("status"), reqVO.getStatus()));
+                predicateList.add(cb.equal(root.get("enabled"), reqVO.getStatus()));
             }
             if (Objects.nonNull(reqVO.getStatus())) {
                 predicateList.add(cb.greaterThan(root.get("createTime"), reqVO.getCreateTime()));
@@ -308,8 +310,8 @@ public class RoleServiceImpl implements RoleService {
     }
 
     @Override
-    public List<RoleDO> getRoleList(RoleExportReqVO reqVO) {
-        return roleRepository.findAll(getExportReqSpecification(reqVO));
+    public List<CreedAuthorities> getRoleList(RoleExportReqVO reqVO) {
+        return authorityRepository.findAll(getExportReqSpecification(reqVO));
     }
 
     /**
@@ -318,29 +320,22 @@ public class RoleServiceImpl implements RoleService {
      * 1. 是否存在相同名字的角色
      * 2. 是否存在相同编码的角色
      *
-     * @param name 角色名字
-     * @param code 角色额编码
+     * @param description 角色名字
+     * @param authority 角色额编码
      * @param id 角色编号
      */
     @VisibleForTesting
-    public void checkDuplicateRole(String name, String code, Long id) {
+    public void checkDuplicateRole(String description, String authority, String id) {
         // 0. 超级管理员，不允许创建
-        if (RoleCodeEnum.isSuperAdmin(code)) {
-            throw exception(ROLE_ADMIN_CODE_ERROR, code);
+        if (RoleCodeEnum.isSuperAdmin(authority)) {
+            throw exception(ROLE_ADMIN_CODE_ERROR, authority);
         }
         // 1. 该 name 名字被其它角色所使用
-        Optional<RoleDO> roleOptional = roleRepository.findByName(name);
-        if (roleOptional.isPresent() && !roleOptional.get().getId().equals(id)) {
-            throw exception(ROLE_NAME_DUPLICATE, name);
-        }
-        // 2. 是否存在相同编码的角色
-        if (!StringUtils.hasText(code)) {
-            return;
-        }
-        // 该 code 编码被其它角色所使用
-        roleOptional = roleRepository.findByCode(code);
-        if (roleOptional.isPresent() && !roleOptional.get().getId().equals(id)) {
-            throw exception(ROLE_CODE_DUPLICATE, code);
+        Optional<CreedAuthorities> roleOptional = authorityRepository.findByAuthority(authority);
+        if (roleOptional.map(CreedAuthorities::getId)
+                .filter(s -> !StringUtils.equals(s, id))
+                .isPresent()) {
+            throw exception(ROLE_CODE_DUPLICATE, authority);
         }
     }
 
@@ -348,10 +343,11 @@ public class RoleServiceImpl implements RoleService {
      * 校验角色是否可以被更新
      *
      * @param id 角色编号
+     * @return
      */
     @VisibleForTesting
-    public void checkUpdateRole(Long id) {
-        Optional<RoleDO> roleOptional = roleRepository.findById(id);
+    public CreedAuthorities checkUpdateRole(String id) {
+        Optional<CreedAuthorities> roleOptional = authorityRepository.findById(id);
         if (roleOptional.isEmpty()) {
             throw exception(ROLE_NOT_EXISTS);
         }
@@ -359,24 +355,25 @@ public class RoleServiceImpl implements RoleService {
         if (RoleTypeEnum.SYSTEM.getType().equals(roleOptional.get().getType())) {
             throw exception(ROLE_CAN_NOT_UPDATE_SYSTEM_TYPE_ROLE);
         }
+        return roleOptional.get();
     }
 
     @Override
-    public void validRoles(Collection<Long> ids) {
+    public void validRoles(Collection<String> ids) {
         if (CollectionUtils.isEmpty(ids)) {
             return;
         }
         // 获得角色信息
-        List<RoleDO> roles = roleRepository.findAllById(ids);
-        Map<Long, RoleDO> roleMap = CollUtils.convertMap(roles, RoleDO::getId);
+        List<CreedAuthorities> authorities = authorityRepository.findAllById(ids);
+        Map<String, CreedAuthorities> roleMap = CollUtils.convertMap(authorities, CreedAuthorities::getId);
         // 校验
         ids.forEach(id -> {
-            RoleDO role = roleMap.get(id);
-            if (role == null) {
+            CreedAuthorities authorities1 = roleMap.get(id);
+            if (authorities1 == null) {
                 throw exception(ROLE_NOT_EXISTS);
             }
-            if (!CommonStatusEnum.ENABLE.getStatus().equals(role.getStatus())) {
-                throw exception(ROLE_IS_DISABLE, role.getName());
+            if (!CommonStatusEnum.ENABLE.equals(authorities1.getEnabled())) {
+                throw exception(ROLE_IS_DISABLE, authorities1.getAuthority());
             }
         });
     }
